# student-management

./: .env.example  README.md  docker-compose.yml  pyproject.toml
dockers/: Dockerfile  Dockerfile.frontend
services/backend/: pyproject.toml
services/backend/src/backend/: __init__.py  config.py  database.py  main.py  utils.py
services/backend/src/backend/models/: __init__.py  class_.py  parent.py  registration.py  student.py  subscription.py
services/backend/src/backend/routers/: classes.py  parents.py  registrations.py  students.py  subscriptions.py
services/backend/src/backend/schemas/: class_.py  parent.py  registration.py  student.py  subscription.py
services/frontend/: package.json
services/frontend/src/app/: layout.tsx
services/frontend/src/app/classes/: page.tsx
services/frontend/src/app/parents/: page.tsx
services/frontend/src/app/students/: page.tsx
services/frontend/src/app/subscriptions/: page.tsx
services/frontend/src/lib/: api.ts
