[project]
name = "backend"
version = "0.1.0"
description = "Website Management backend – FastAPI + PostgreSQL POC"
readme = "README.md"
authors = [
    { name = "kientt-3694", email = "tran.trung.kien@sun-asterisk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
